--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -3,7 +3,11 @@
 
 <head>
     <% include ./partials/head %>
-    <script src="/static/js/profile.js"></script>
+    <script src="/static/js/profile.js">
+
+
+
+    </script>
 </head>
 
 <body>
@@ -15,13 +19,22 @@
         <hr>
         <div class="row">
             <div class="col-md-4">
-                <div><strong>Kill/death ratio</strong> <span id="kdr"></span> </div>
+                <div>
+                    <strong>Kill/death ratio</strong>
+                    <span id="kdr"></span>
+                </div>
             </div>
             <div class="col-md-4">
-                <div><strong>Headshots</strong> <span id="hs-percent"></span> </div>
+                <div>
+                    <strong>Headshots</strong>
+                    <span id="hs-percent"></span>
+                </div>
             </div>
             <div class="col-md-4">
-                <div><strong>Accuracy</strong> <span id="accuracy"></span> </div>
+                <div>
+                    <strong>Accuracy</strong>
+                    <span id="accuracy"></span>
+                </div>
             </div>
         </div>
 
@@ -29,13 +42,13 @@
 
         <div class="row">
             <div class="col-md-4">
-                <canvas id="hits-chart" width="200" height="200"></canvas>
+                <canvas height="200" id="hits-chart" width="200"></canvas>
             </div>
             <div class="col-md-4">
-                <canvas id="side-wins" width="200" height="200"></canvas>
+                <canvas height="200" id="side-wins" width="200"></canvas>
             </div>
             <div class="col-md-4">
-                <canvas id="c4-stats" width="200" height="200"></canvas>
+                <canvas height="200" id="c4-stats" width="200"></canvas>
             </div>
 
         </div>
@@ -53,33 +66,56 @@
                             <th>Kills</th>
                         </tr>
                     </thead>
-                    <tbody>
-
-                    </tbody>
+                    <tbody></tbody>
                 </table>
 
             </div>
             <div class="col-md-6">
                 <ul class="list-group">
-                    <li class="list-group-item">Kills: <span id="kills"></span></li>
-                    <li class="list-group-item">Deaths: <span id="deaths"></span></li>
-                    <li class="list-group-item">Assists: <span id="assists"></span></li>
-                    <li class="list-group-item">Suicides: <span id="suicides"></span></li>
-                    <li class="list-group-item">Teamkills: <span id="tk"></span></li>
-                    <li class="list-group-item">MVPs: <span id="mvp"></span></li>
-                    <li class="list-group-item">Shots: <span id="shots"></span></li>
-                    <li class="list-group-item">Hits: <span id="hits"></span></li>
-                    <li class="list-group-item">Total damage: <span id="damage"></span> </li>
-                    <li class="list-group-item">Average hits per kill: <span id="hits-per-kill"></span> </li>
-                    <li class="list-group-item">Average damage per hit: <span id="damage-per-hit"></span> </li>
-                    <li class="list-group-item">Time played: <span id="time-played"></span> </li>
-                    <li class="list-group-item">Last connected: <span id="last-connected"></span> </li>
+                    <li class="list-group-item">Kills:
+                        <span id="kills"></span>
+                    </li>
+                    <li class="list-group-item">Deaths:
+                        <span id="deaths"></span>
+                    </li>
+                    <li class="list-group-item">Assists:
+                        <span id="assists"></span>
+                    </li>
+                    <li class="list-group-item">Suicides:
+                        <span id="suicides"></span>
+                    </li>
+                    <li class="list-group-item">Teamkills:
+                        <span id="tk"></span>
+                    </li>
+                    <li class="list-group-item">MVPs:
+                        <span id="mvp"></span>
+                    </li>
+                    <li class="list-group-item">Shots:
+                        <span id="shots"></span>
+                    </li>
+                    <li class="list-group-item">Hits:
+                        <span id="hits"></span>
+                    </li>
+                    <li class="list-group-item">Total damage:
+                        <span id="damage"></span>
+                    </li>
+                    <li class="list-group-item">Average hits per kill:
+                        <span id="hits-per-kill"></span>
+                    </li>
+                    <li class="list-group-item">Average damage per hit:
+                        <span id="damage-per-hit"></span>
+                    </li>
+                    <li class="list-group-item">Time played:
+                        <span id="time-played"></span>
+                    </li>
+                    <li class="list-group-item">Last connected:
+                        <span id="last-connected"></span>
+                    </li>
                 </ul>
             </div>
 
 
         </div>
-
 
     </div>
 </body>
