--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,39 +12,39 @@
 
     <br>
 
-    <div class="container ">
-
+    <div class="container-fluid">
+        <% if(global.config.historicalData.enabled) { %>
         <div class="row">
             <div class="col-sm-6">
                 <div class="card">
                     <div id="score-inc" class="card-body">
-                        <h5 class="card-title">Highest score increase</h5>
+                        <h5 class="card-title">Score increase</h5>
                         <p class="card-text">
 
                             <canvas id="score-increase-chart"></canvas>
 
                         </p>
-                        <a href="#" class="btn btn-primary">Profile</a>
+                        <ol class="two-columns"></ol>
                     </div>
                 </div>
             </div>
             <div class="col-sm-6">
                 <div class="card">
                     <div id="kills-inc" class="card-body">
-                        <h5 class="card-title">Most kills increase</h5>
+                        <h5 class="card-title">Kills increase</h5>
                         <p class="card-text">
 
                             <canvas id="kills-increase-chart"></canvas>
 
                         </p>
-                        <a href="#" class="btn btn-primary">Profile</a>
+                        <ol class="two-columns"></ol>
                     </div>
                 </div>
             </div>
         </div>
 
         <hr>
-
+        <% } %>
         <table class="table" id="overview">
             <thead>
                 <tr>
