Historical data full implementation (#10)
* Basic hook implementation

* Ci/cd (#5)

* Add docs script

* Refactor web api into separate class

* Refactor discordBot into separate class

* Add tests for web API

* Add test coverage reporting

* Add MySQL service to travis config

* Fix lcov reporter for test coverage

* Add basic tests for discord commands

* remove brittle test

* Only run the coverage script as that also runs test

* Test argument validation for lookup command

* Refactor lookup test

* Add basic test for historicalInfo#gatherData

* Use cron syntax for historicalData

* Basic score chart on player profile

* Clean up travis for auto releases

* Update dependencies

* Fixes #6 - rename image files to lowercase

* Add icons to navbar

* Fix ct/t wins chart to use correct data

* Sensible defaults for historicalData config

* Add some basic historical data charts to index and profile pages

* Scale webserver to all available CPUs to improve performance

* Add logging with winston and morgan

* Add score & kill changes charts to index page

* Change styling of index page

* Fix tests

* Fix lockfile

* Allow longer timeout on tests touching discord API

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,22 +10,75 @@
 
     <% include ./partials/header %>
 
-    <div class="container ">
-        <table class="table" id="overview">
-            <thead>
-                <tr>
-                    <th>Name</th>
-                    <th>Score</th>
-                    <th>Kill/death ratio</th>
-                    <th>Headshot %</th>
-                    <th>Kills</th>
-                    <th>Deaths</th>
-                </tr>
-            </thead>
-            <tbody>
+    <br>
 
-            </tbody>
-        </table>
+    <div class="container-fluid">
+        <% if(global.config.historicalData.enabled) { %>
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="card text-center">
+                    <div id="score-inc" class="card-body">
+                        <div class="card-header">
+                            <h2>Score</h2>
+                        </div>
+                        <p class="card-text">
+
+                            <canvas id="score-increase-chart"></canvas>
+
+                        </p>
+                        <ol class="two-columns"></ol>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <div class="card text-center">
+                    <div id="kills-inc" class="card-body">
+                        <div class="card-header">
+                            <h2>Kills</h2>
+                        </div>
+                        <p class="card-text">
+
+                            <canvas id="kills-increase-chart"></canvas>
+
+                        </p>
+                        <ol class="two-columns"></ol>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <hr>
+        <% } %>
+
+        <div class="card text-center">
+            <div class="card-body">
+                <div class="card-header">
+                    <h2>Players</h2>
+                </div>
+                <p class="card-text">
+
+                    <table class="table" id="overview">
+                        <thead>
+                            <tr>
+                                <th>Name</th>
+                                <th>Score</th>
+                                <th>Kill/death ratio</th>
+                                <th>Headshot %</th>
+                                <th>Kills</th>
+                                <th>Deaths</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+
+                        </tbody>
+                    </table>
+
+                </p>
+            </div>
+        </div>
+
+
+
 
     </div>
 </body>
