added Accuracy column to the overview table

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -66,6 +66,7 @@
                                 <th>Headshot %</th>
                                 <th>Kills</th>
                                 <th>Deaths</th>
+                                <th>Accuracy</th>
                             </tr>
                         </thead>
                         <tbody>
